examples/qasm_dev/syntax_errors/e48.qasm
// custom op, missing ;
// NOT WORKING, NO CLUE WHY - no, it's working
gate u2(phi,lambda) q { cx (x a,b; }

